[package]
name = "llm-context-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"] }
log = { version = "0.4.22" }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tempfile = { version = "3.14.0" }
url = { version = "2.5.3" }
walkdir = { version = "2.5.0" }
zip = { version = "2.2.0" }
env_logger = { version = "0.11.5" }
